[workspace]

members = [
    "2023/day1",
    "2023/day2",
    "2023/day3",
    "2023/day4",
    "2023/day5",
    "2023/day6",
    "2023/day7",
    "2023/day8",
    "2023/day9",
    "2023/day10",
    "2023/day11",
    "2023/day12",
    "2023/day13",
    "2023/day14",
    "2023/day15",
    "2023/day16",
    "2023/day17",
    "2023/day18",
    "2023/day19",
    "2023/day20",
    "2023/day21",
    "2023/day22",
    "2023/day23",
    "2023/day24",
    "2023/day25", "2024/day1-24", "2024/day2-24", "2024/day3-24", "2024/day4-24", "2024/day5-24", "2024/day6-24", 
]
